# Globe

./: graph_builder.py  html_generator.py  lookalike_domain.py  main.py  node_manager.py  optimized_html_generator.py  package-lock.json  pyproject.toml  readme.md  unified_html_generator.py  urlscan_enricher.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  index.css  types.ts
client/src/components/: BarChartWidget.tsx  ChartCard.tsx  Dashboard.tsx  FileUpload.tsx  Header.tsx  NetworkGraph.tsx  PieChartWidget.tsx  StatCard.tsx  UploadButton.tsx
client/src/services/: aiService.ts  dataService.ts
common/database/: query_master.py
data/: Japan_VASP_data.csv
