[tool.poetry]
name = "domain-network-visualization"
version = "0.2.0"
description = "Interactive domain network visualization tool from CSV data"
authors = ["Nir Molcho <nir.molcho@alterya.com>"]
readme = "README.md"
packages = [{include = "domain_network_visualization", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
networkx = "^3.0"
jinja2 = "^3.1.0"
more-itertools = "^10.7.0"
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
domain-viz = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310" 